remove the medium low and medium presets, medium high is now medium

--- a/config/cfg/presets/medium.cfg
+++ b/config/cfg/presets/medium.cfg
@@ -1,41 +1,36 @@
-// Medium preset
-// The maximum performance you can get while enabling a few effects that may give you a slight edge
-lod=low
+// Medium High preset
+// Disables unoptimized features and optimize the game without making it look bad
+lod=high
 lighting=medium_high
 lighting_ex=high
 shadows=medium
 flashlight=off
 effects=medium
-water=medium
-particles=low
-post_processing=low
-pyrovision=low
+water=high
+particles=medium
+post_processing=high
+pyrovision=medium
 romevision=off
 motion_blur=off
-anti_aliasing=off
-texture_filter=trilinear
-characters=low
+anti_aliasing=msaa_4x
+texture_filter=aniso4x
+characters=high
 decals=low
 decals_models=off
 decals_art=on
 sprays=off
-gibs=off
+gibs=low
 props=medium
-ragdolls=off
+ragdolls=medium
 3dsky=off
-jigglebones=off
+jigglebones=on
 sheens_speed=slow
 sheens_tint=high
-textures=medium
-ropes=off
+textures=high
+ropes=low
 vsync=off
 hud_player_model=off
-hud_avatars=friends
 outlines=low
-sound=medium
+sound=high
 
-tf_quest_map_tuner_wobble_magnitude 0 // Disable the red tuner on the contracker
-tf_item_inspect_model_auto_spin 0 // Do not auto spin items in the inspect view
-tf_dashboard_slide_time 0 // Instant transitions
-
-echo"Medium preset selected"
+echo"Medium High preset selected"
