--- a/config/cfg/presets/destitute.cfg
+++ b/config/cfg/presets/destitute.cfg
@@ -1,4 +1,4 @@
-// Very Low preset
+// Destitute preset
 // Negatively affects playability by a lot and disables very essential features in desperation for performance
 packet_rate=congestion
 lod=low
