--- a/config/cfg/presets/medium.cfg
+++ b/config/cfg/presets/medium.cfg
@@ -1,6 +1,5 @@
-// Medium High preset
-// Disables unoptimized features and optimize the game without making it look bad
-lod=high
+// Medium preset
+lod=medium
 lighting=medium_high
 lighting_ex=high
 shadows=medium
