begin module/preset reset on the config base
also remove deprecated settings

--- a/config/cfg/presets/low.cfg
+++ b/config/cfg/presets/low.cfg
@@ -6,8 +6,7 @@ shadows=off
 flashlight=off
 effects=low
 water=low
-particles=low
-post_processing=off
+post_processing=low
 pyrovision=low
 romevision=off
 motion_blur=off
