--- a/config/cfg/presets/medium.cfg
+++ b/config/cfg/presets/medium.cfg
@@ -1,21 +1,20 @@
 // Medium preset
 lod=medium
-lighting=medium_high
+lighting=medium
 lighting_ex=high
-shadows=medium
+shadows=low
 flashlight=off
 effects=medium
-water=high
-particles=medium
+water=medium
 post_processing=high
 pyrovision=medium
 romevision=off
 motion_blur=off
-anti_aliasing=msaa_4x
-texture_filter=aniso4x
-characters=high
+anti_aliasing=msaa_2x
+texture_filter=aniso2x
+characters=medium
 decals=low
-decals_models=off
+decals_models=on
 decals_art=on
 sprays=off
 gibs=low
@@ -28,7 +27,7 @@ sheens_tint=high
 textures=high
 ropes=low
 vsync=off
-hud_player_model=off
+hud_player_model=on
 outlines=low
 sound=high
 
