--- a/config/cfg/presets/high.cfg
+++ b/config/cfg/presets/high.cfg
@@ -1,12 +1,11 @@
 // High preset
 lod=high
-lighting=very_high
+lighting=high
 lighting_ex=high
 shadows=high
 flashlight=off
 effects=high
-water=very_high
-particles=high
+water=high
 post_processing=high
 pyrovision=high
 romevision=off
@@ -14,11 +13,11 @@ motion_blur=off
 anti_aliasing=msaa_8x
 texture_filter=aniso8x
 characters=high
-decals=medium
-decals_models=low
+decals=high
+decals_models=on
 decals_art=on
 sprays=off
-gibs=medium
+gibs=low
 props=high
 ragdolls=high
 3dsky=on
