--- a/config/cfg/presets/ultra.cfg
+++ b/config/cfg/presets/ultra.cfg
@@ -1,21 +1,20 @@
 // Ultra preset
 lod=ultra
-lighting=ultra
+lighting=high
 lighting_ex=high
 shadows=ultra
 flashlight=off
 effects=ultra
 water=ultra
-particles=ultra
 post_processing=high
 pyrovision=high
 romevision=off
 motion_blur=off
 anti_aliasing=msaa_8x
 texture_filter=aniso16x
-characters=ultra
+characters=high
 decals=ultra
-decals_models=high
+decals_models=on
 decals_art=on
 sprays=off
 gibs=high
