--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -8,7 +8,7 @@
 // Full mastercomfig console variables list, check out modules too!
 // https://docs.comfig.app/latest/customization/modules/
 
-// Recommended launch options: -novid -nojoy -nosteamcontroller -nohltv -particles 1 -precachefontchars -noquicktime
+// Recommended launch options: -novid -nojoy -nosteamcontroller -nohltv -particles 1 -precachefontchars
 
 // =================
 // '--- Network ---'
