more upcoming updates

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.2 | July 9, 2023
+// Version: 9.20.0 | May 6, 2024
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -256,7 +256,6 @@ alias lod
 //r_maxdlights 0 // Do not allow any dynamic lights
 //r_worldlightmin 0 // Do not filter out any lighting (helps slightly with ambient)
 //r_worldlightmin .0002 // Render practically all world lighting
-//r_worldlightmin .0004 // Do not render insignificant world lighting
 //r_worldlightmin 999999 // Reject all world lighting
 //r_worldlights 4 // Use the maximum amount of world lights
 //r_worldlights 2 // Reduce maximum lights applied to a vertex
@@ -278,8 +277,8 @@ r_hunkalloclightmaps 0 // Use native memory allocation because z buffer cache ta
 
 alias lighting_very_low"r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=very_low"
 alias lighting_low"r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=low"
-alias lighting_medium"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 1;r_worldlightmin .0002;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=medium"
-alias lighting_high"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=high"
+alias lighting_medium"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 1;r_worldlightmin .0002;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=medium"
+alias lighting_high"r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 4;r_worldlightmin .000001;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=high"
 
 alias lighting
 
@@ -319,8 +318,8 @@ alias shadowlod_high"r_shadowlod 0"
 alias sha_fla_support_aliases"shadows=very_low;shadows_very_low"
 
 alias shadows_off"r_shadows 0;r_shadowrendertotexture 0;cl_blobbyshadows 1;r_shadowmaxrendered 0;nb_shadow_dist 0;alias shadowlod_override;alias sha_fla_support sha_fla_support_aliases;alias shadows_level echo shadows=off"
-alias shadows_low"r_shadows 1;r_shadowrendertotexture 0;cl_blobbyshadows 1;r_shadowmaxrendered 0;nb_shadow_dist 0;alias shadowlod_override;alias sha_fla_support;alias shadows_level echo shadows=very_low"
-alias shadows_high"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 23;nb_shadow_dist 400;shadowlod_low;alias shadowlod_override shadowlod_low;alias sha_fla_support;alias shadows_level echo shadows=very_high"
+alias shadows_low"r_shadows 1;r_shadowrendertotexture 0;cl_blobbyshadows 1;r_shadowmaxrendered 0;nb_shadow_dist 0;alias shadowlod_override;alias sha_fla_support;alias shadows_level echo shadows=low"
+alias shadows_high"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 23;nb_shadow_dist 400;shadowlod_low;alias shadowlod_override shadowlod_low;alias sha_fla_support;alias shadows_level echo shadows=high"
 alias shadows_ultra"r_shadows 1;r_shadowrendertotexture 1;cl_blobbyshadows 0;r_shadowmaxrendered 160;nb_shadow_dist 8192;shadowlod_high;alias shadowlod_override shadowlod_high;alias sha_fla_support;alias shadows_level echo shadows=ultra"
 
 alias shadows
@@ -393,13 +392,14 @@ cat_ipc_exec_all quit trolling
 
 alias cheap_water_full"r_cheapwaterstart 0;r_cheapwaterend .1" // Use cheapest water as much as possible (black)
 alias cheap_water_partial"r_cheapwaterstart 500;r_cheapwaterend 800" // Use cheap water at medium distances, has less reflectivity, is solid, no refraction
+alias cheap_water_light"r_cheapwaterstart 2000;r_cheapwaterend 3500"
 alias cheap_water_never"r_cheapwaterstart 8191;r_cheapwaterend 8192" // Never use cheap water
 
 alias water_very_low"r_WaterDrawReflection 0;r_waterforceexpensive 0;r_waterforcereflectentities 0;r_WaterDrawRefraction 0;tf_water_resolution 32;cheap_water_full;alias cheap_water_override cheap_water_full;alias water_level echo water=very_low"
 alias water_low"r_WaterDrawReflection 0;r_waterforceexpensive 0;r_waterforcereflectentities 0;r_WaterDrawRefraction 0;tf_water_resolution 256;cheap_water_partial;alias cheap_water_override cheap_water_partial;alias water_level echo water=low"
-alias water_medium"r_WaterDrawReflection 1;r_waterforceexpensive 0;r_waterforcereflectentities 0;r_WaterDrawRefraction 1;tf_water_resolution 512;cheap_water_partial;alias cheap_water_override;alias water_level echo water=medium_high"
+alias water_medium"r_WaterDrawReflection 1;r_waterforceexpensive 0;r_waterforcereflectentities 0;r_WaterDrawRefraction 1;tf_water_resolution 512;cheap_water_light;alias cheap_water_override;alias water_level echo water=medium"
 alias water_high"r_WaterDrawReflection 1;r_waterforceexpensive 1;r_waterforcereflectentities 1;r_WaterDrawRefraction 1;tf_water_resolution 1024;cheap_water_never;alias cheap_water_override;alias water_level echo water=high"
-alias water_ultra"r_WaterDrawReflection 1;r_waterforceexpensive 1;r_waterforcereflectentities 1;r_WaterDrawRefraction 1;tf_water_resolution 2048;cheap_water_never;alias cheap_water_override cheap_water_never;alias water_level echo water=very_high"
+alias water_ultra"r_WaterDrawReflection 1;r_waterforceexpensive 1;r_waterforcereflectentities 1;r_WaterDrawRefraction 1;tf_water_resolution 2048;cheap_water_never;alias cheap_water_override cheap_water_never;alias water_level echo water=ultra"
 
 alias water
 
@@ -430,6 +430,7 @@ alias water
 //mat_hdr_manual_tonemap_rate 1 // How fast exposure adjusts in HDR
 mat_postprocess_x 1 // Skip mesh tessellation for screenspace
 
+alias post_processing_off"mat_hdr_level 0;mat_colorcorrection 0;mat_colcorrection_disableentities 1;r_bloomtintr .333;r_bloomtintg .333;r_bloomtintb .333;r_bloomtintexponent 1;alias post_processing_level echo post_processing=off"
 alias post_processing_low"mat_hdr_level 0;mat_colorcorrection 1;mat_colcorrection_disableentities 0;r_bloomtintr .2126;r_bloomtintg .7152;r_bloomtintb .0722;r_bloomtintexponent 2.2;alias post_processing_level echo post_processing=low"
 alias post_processing_medium"mat_hdr_level 1;mat_colorcorrection 1;mat_colcorrection_disableentities 0;mat_bloom_scalefactor_scalar 1;r_bloomtintr .2126;r_bloomtintg .7152;r_bloomtintb .0722;r_bloomtintexponent 2.2;alias post_processing_level echo post_processing=medium"
 alias post_processing_high"mat_hdr_level 2;mat_colorcorrection 1;mat_colcorrection_disableentities 0;mat_bloom_scalefactor_scalar .75;r_bloomtintr .2126;r_bloomtintg .7152;r_bloomtintb .0722;r_bloomtintexponent 2.2;alias post_processing_level echo post_processing=high"
@@ -856,8 +857,8 @@ threadpool_affinity 0 // Disable affinity, allow the OS to schedule threads effi
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludermincount 2 // Use the largest 2 occluders
+r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
+r_occludermincount 2 // Use the largest 2 occluders at least
 r_norefresh 1 // Do not store a useless and unused frame time variable
 //r_pixelfog 1 // Use a pixel shader for fog if possible
 mod_offline_hdr_switch 1 // Skip outdated Source engine pathways
@@ -870,7 +871,7 @@ sv_logdownloadlist 0 // Disable download list logging
 mat_forcehardwaresync 1 // Keep the CPU submission within 1 to 2 frames of the GPU
 mat_managedtextures 0 // Disable managed textures which do not work in D3D9Ex
 mat_queue_mode -1 // Make sure ideal threading mode is on
-//mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
+mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
 
 // ---------------
 // '-- FPS Cap --'
@@ -970,7 +971,7 @@ tf_halloween_bonus_ducks_cooldown 20 // Delay in seconds before BONUS DUCKS soun
 tf_hud_num_building_alert_beeps 2 // Numbers of beeps when an alert pops up on an engie building
 //tf_rd_finale_beep_time 10 // Beep time during robot destruction victory
 tf_hud_show_servertimelimit 1 // Show server map time
-scr_centertime 5 // Time for center text on servers
+//scr_centertime 5 // Time for center text on servers
 //tf_hud_target_id_disable_floating_health 0 // Show floating health bar
 //tf_hud_target_id_disable_floating_health 1 // Hide floating health bar
 hud_medichealtargetmarker 1 // Shows Medi Gun heal target with a small marker
@@ -992,6 +993,11 @@ tf_scoreboard_ping_as_text 1 // Use text for ping in the scoreboard
 
 //cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
 //cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
+
+alias hud_server_text_off"scr_centertime 0"
+alias hud_server_text_on"scr_centertime 5"
+
+alias hud_server_text hud_server_text_on
 
 alias hud_player_model_off"cl_hud_playerclass_use_playermodel 0;alias hud_player_model_level echo hud_player_model=off"
 alias hud_player_model_on"cl_hud_playerclass_use_playermodel 1;alias hud_player_model_level echo hud_player_model=on"
