--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.2 | July 9, 2023
+// Version: 9.20.0 | May 6, 2024
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -189,7 +189,7 @@ mat_bumpmap 0 // Disable bumpmapping materials
 //mat_specular 1 // Enable specular
 mat_specular 0 // Disable specular materials
 //mat_monitorgamma 2.2 // Monitor gamma (2.2 is the assumed value in various places)
-r_lightcache_zbuffercache 1 // Cache places where lighting is able to reach dynamic entities and use new lighting pathway
+//r_lightcache_zbuffercache 1 // Cache places where lighting is able to reach dynamic entities and use new lighting pathway
 mat_softwarelighting 0 // Make sure we use the GPU
 r_hunkalloclightmaps 0 // Use native memory allocation because z buffer cache takes up the hunk
 
@@ -565,11 +565,9 @@ threadpool_affinity 0 // Disable affinity, allow the OS to schedule threads effi
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludeemaxarea 1 // Be more conservative with our resolution
-r_occluderminarea 1 // ^
-r_occludermincount 2 // Use the largest 2 occluders
-mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
+r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
+r_occludermincount 2 // Use the largest 2 occluders at least
+//mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs. (does not work in autoexec)
 r_norefresh 1 // Do not store a useless and unused frame time variable
 //r_pixelfog 1 // Use a pixel shader for fog if possible
 mod_offline_hdr_switch 1 // Skip outdated Source engine pathways
@@ -582,7 +580,7 @@ sv_logdownloadlist 0 // Disable download list logging
 mat_forcehardwaresync 1 // Keep the CPU submission within 1 to 2 frames of the GPU
 mat_managedtextures 0 // Disable managed textures which do not work in D3D9Ex
 mat_queue_mode -1 // Make sure ideal threading mode is on
-//mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
+mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
 
 // ---------------
 // '-- FPS Cap --'
@@ -591,7 +589,7 @@ mat_queue_mode -1 // Make sure ideal threading mode is on
 
 //mat_powersavingsmode 1 // Set the FPS cap to half of refresh rate
 //fps_max 0 // Reaching the cap within a certain timing causes CPU intrinsic pauses
-fps_max 1000 // A safety for users who can reach the max
+fps_max 400 // A reasonable default to manage both loading times and hitting the cap
 
 // -------------
 // '-- VSync --'
@@ -1079,8 +1077,8 @@ snd_async_minsize 32768 // Load sounds async if they will not fit in a chunk
 
 //volume 1 // Set the primary volume
 //snd_musicvolume 1 // Set music volume
-snd_mixahead .05 // How many seconds of the 44100 sample rate we mix. Value chosen as a fraction of samples.
-snd_delay_sound_shift .001 // Reduce delay (risky with hitches)
+snd_mixahead .0626 // How many seconds of the 44100 sample rate we mix. Value chosen as a fraction of samples.
+snd_delay_sound_shift .000001 // Offset delay
 //cl_soundemitter_flush // Command to clear out the loaded sounds file
 //cl_soundscape_flush // Command to clear out the loaded soundscapes file
 
@@ -1240,7 +1238,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.10.2 | July 9, 2023"
+alias version_comfig"echo mastercomfig version: 9.20.0 | May 6, 2023"
 
 // Echo
 echo""
@@ -1254,8 +1252,8 @@ echo""
 echo""
 echo"  **********************************"
 echo"  **********************************"
-echo"  mastercomfig 9.10.2 loaded"
-echo"  July 9, 2023"
+echo"  mastercomfig 9.20.0 loaded"
+echo"  May 6, 2023"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1263,7 +1261,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 30 hours to produce."
+echo"  This release took 160 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.comfig.app/latest/support_me"
@@ -1272,6 +1270,21 @@ echo"  I accept Ko-fi, Liberapay, and trade offers!"
 echo""
 echo"  Your continued support, gratitude and dedication"
 echo"  are much appreciated. Thank you so much!"
+echo"  ##################################################"
+echo""
+echo""
+echo""
+echo""
+echo"  ##################################################"
+echo"  !!! WARNING !!!"
+echo"  You are using an unsupported autoexec version of mastercomfig."
+echo"  This version may have more bugs, reduced performance and less features."
+echo""
+echo"  Switch to the main version of mastercomfig for enhanced customizations,"
+echo"  easier updates, and improved performance and stability."
+echo""
+echo"  Please only use this version if you're absolutely sure you want to."
+echo"  (and I totally understand if you do!)"
 echo"  ##################################################"
 echo""
 echo""
