--- a/config/cfg/presets/medium.cfg
+++ b/config/cfg/presets/medium.cfg
@@ -29,7 +29,7 @@ sheens_tint=high
 textures=medium
 ropes=off
 vsync=off
-hud_player_model=off
+hud_player_model=on
 hud_avatars=friends
 outlines=low
 sound=medium
