--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,13 @@
 name: CI
 
 on:
+  workflow_dispatch:
+    inputs:
+      patch:
+        description: "Patch"
+        required: true
+        type: string
+        default: "true"
   push:
     branches: [develop]
     paths-ignore:
@@ -23,41 +30,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           clean: false
-      - name: Cache
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/vpk_linux32
-            ~/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/libvstdlib.so
-            ~/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/libtier0.so
-            ~/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/filesystem_stdio.so
-            ~/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/libtcmalloc_minimal.so.4
-          key: ${{ runner.os }}-cache-2
-      - name: Install dependencies (with Steam)
-        if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-        run: |
-          sudo dpkg --add-architecture i386
-          sudo apt-get update
-          echo steam steam/question select "I AGREE" | sudo debconf-set-selections
-          echo steam steam/license note '' | sudo debconf-set-selections
-          sudo DEBIAN_FRONTEND=noninteractive apt-get -yq --no-install-recommends install steamcmd
-          /usr/games/steamcmd +login anonymous +download_depot 232250 232256 +quit
-          sudo bash -c 'cat <<\EOF > /usr/local/bin/vpk
-          #!/bin/bash
-          VPK_LINUX=/home/runner/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/vpk_linux32
-          VALVE_LIB_DIR=/home/runner/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin
-          LD_LIBRARY_PATH="${VALVE_LIB_DIR}:${LD_LIBRARY_PATH}" "${VPK_LINUX}" "${@}"
-          EOF'
-          sudo chmod +x /usr/local/bin/vpk
       - name: Install dependencies
-        if: ${{ steps.cache.outputs.cache-hit == 'true' }}
         run: |
+          pip install vpk
+          rm -f /home/runner/.local/bin/vpk
           sudo bash -c 'cat <<\EOF > /usr/local/bin/vpk
           #!/bin/bash
-          VPK_LINUX=/home/runner/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin/vpk_linux32
-          VALVE_LIB_DIR=/home/runner/.steam/steamcmd/linux32/steamapps/content/app_232250/depot_232256/bin
-          LD_LIBRARY_PATH="${VALVE_LIB_DIR}:${LD_LIBRARY_PATH}" "${VPK_LINUX}" "${@}"
+          REPO_NAME=${GITHUB_REPOSITORY#*/}
+          python "$GITHUB_WORKSPACE/$REPO_NAME/dev/vpk_cli.py" "${@}"
           EOF'
           sudo chmod +x /usr/local/bin/vpk
       - name: Check tag
@@ -72,6 +52,12 @@ jobs:
         if: ${{ github.event_name == 'push' && steps.check-tag.outputs.release != 'true' }}
         env:
           prerelease: true
+          GH_TOKEN: ${{secrets.REPO_TOKEN}}
+      - name: Build mastercomfig (patch)
+        run: dev/release.sh
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.patch == 'true' }}
+        env:
+          patch: true
           GH_TOKEN: ${{secrets.REPO_TOKEN}}
       - name: Build mastercomfig (release)
         run: dev/release.sh
