fix some merge errors from dev

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -888,7 +888,7 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
 r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludermincount 2 // Use the largest 2 occluders
+r_occludermincount 2 // Use the largest 2 occluders at least
 r_norefresh 1 // Do not store a useless and unused frame time variable
 //r_pixelfog 1 // Use a pixel shader for fog if possible
 mod_offline_hdr_switch 1 // Skip outdated Source engine pathways
