--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -565,7 +565,7 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
 r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
-r_occludermincount 2 // Use the largest 2 occluders
+r_occludermincount 2 // Use the largest 2 occluders at least
 //mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs. (does not work in autoexec)
 r_norefresh 1 // Do not store a useless and unused frame time variable
 //r_pixelfog 1 // Use a pixel shader for fog if possible
