Remove additional spaces (#749)
Keep it consistent

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1043,7 +1043,7 @@ alias match_hud match_hud_on
 
 //map_background itemtest // Map background for enhancing main menu visuals, or to preload content
 
-alias checkpointservercommand "script_execute getpointservercommand; sv_allow_point_servercommand always" // Store previous sv_allow_point_servercommand value and then set to "always", for usage with the main menu music script.
+alias checkpointservercommand"script_execute getpointservercommand;sv_allow_point_servercommand always" // Store previous sv_allow_point_servercommand value and then set it to "always" (for usage with the main menu music script).
 
 alias dynamic_background_off"alias dynamic_background_level echo dynamic_background=off"
 alias dynamic_background_preload"map_background preload_room;wait 5;checkpointservercommand;script_execute randommenumusic;wait 5;disconnect;playmenumusic;alias dynamic_background_level echo dynamic_background=preload"
